correct covers

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -126,7 +126,7 @@
 
 @media only screen and (min-width: 1600px) {
   .marquee {
-    top: 20px;
+    top: 60px;
     left: -120px;
   }
 }
